# Akku-Mointoring-System-Robotino

./: CMakeLists.txt  README.md  package.xml  sensor_thread_akku_monitor.cpp  sensor_thread_akku_monitor.h
Arduino Code/: Akku_Monitoring_Digitale_Eing_nge.ino  Arduino_Code_Akku_Monitoring.ino  Code_Robotino_Arduino_Feste_4_Akkus.ino  Code_Robotino_Arduino_PC_Auswertung.ino
System Arduino/Arduino_Systemcode_Akku_Monitoring/Arduino_Systemcode_Akku_Monitoring_copy_20260531142600/: Arduino_Akku_Monitoring.ino  Arduino_Systemcode_Akku_Monitoring_copy_20260531142600.ino
System ROS2 C++/: CMakeLists.txt  package.xml
System ROS2 C++/Ardunio Code/: Arduino_Code_Akku_Monitoring.ino
src/: arduino_battery_state_reader.cpp  battery_state_estimator.cpp  robotino_voltage_state_reader.cpp  serial_battery_node.cpp  voltage_node.cpp
