<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>akku_monitoring_system</name>
  <version>0.1.0</version>
  <description>ROS2 battery monitoring system for the Festo Robotino using Arduino sensor data and Robotino voltage measurement.</description>

  <maintainer email="moritz@example.com">Moritz Schallenberg</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <build_depend>libcurl4-openssl-dev</build_depend>
  <exec_depend>libcurl4-openssl-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>